--- a/index.html
+++ b/index.html
@@ -10,21 +10,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="canvas">
-          <div class="top">
-            <img class="top-img" src="images/image-product-mobile.jpg" alt=" image-product-mobile">
-          </div>
-          <div class="middle" >
-            <h3>PERFUME</h3>
-            <h1 class="h1-1"><strong>Gabrielle Essence Eau De Perfum</strong></h1>
-            <p>A floral, solar and volumptuous interpretation composed by Oliver Polge, Perfumer-Creator for the house of CHANEL.</p>
-          </div>
-          <div class="bottom">
-            <h1 class="h1-2" >$149.99<span>$169.99 </span></h1>
-           
+      <div class="background">
+            <img class="top-img" src="images/image-product-desktop.jpg" alt=" image-product-desktop">
             
-          </div>
-          <a class="btn">Add to cart</a>
-        </div>  
+            <h3>PERFUME</h3>
+            <h1 class="h1-1">Gabrielle Essence Eau De Perfum</h1>
+            <p>A floral, solar and volumptuous interpretation composed by Oliver Polge, Perfumer-Creator for the house of CHANEL.</p>
+            <h1 class="h1-2" >$149.99<span>$169.99 </span></h1>
+            <br>
+            <a class="btn">Add to cart</a>
+ 
+      </div>  
     </body>
 </html>
