--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
       <div class="background">
             <img class="top-img" src="images/image-product-desktop.jpg" alt=" image-product-desktop">
-            
+            <img class="img" src="images/image-product-mobile.jpg" alt=" image-product-desktop">
             <h3>PERFUME</h3>
             <h1 class="h1-1">Gabrielle Essence Eau De Perfum</h1>
             <p>A floral, solar and volumptuous interpretation composed by Oliver Polge, Perfumer-Creator for the house of CHANEL.</p>
